
@startuml ClassDiagram
!include doc/SDS/CommonClassDiagram/ResultAndError.plantuml
!include doc/SDS/CommonClassDiagram/Recipe/RecipeDbContext.plantuml 
!include doc/SDS/CommonClassDiagram/UnitOfWork.plantuml
!include doc/SDS/CommonClassDiagram/ServiceBus.plantuml

skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
hide circle

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class AdminController {
    +AdminRestoreRecipe(dto : EntityIdDTO): async Task<IActionResult>
}

class RestoreRecipeCommand {
    +CurrentAccountId : Guid
    +Id : Guid
}

class RestoreRecipeCommandHandler {
    -_context : IApplicationDbContext
    -_serviceBus: IServiceBus 
    -_unitOfWork: IUnitOfWork 
    +RestoreRecipeCommandHandler(context : IApplicationDbContext, serviceBus : IServiceBus, unitOfWork : IUnitOfWork)
    +Handle(request: RestoreRecipeCommand, cancellationToken: CancellationToken) : Task<Result>
}

class EntityIdDTO {
    +Id : Guid
}

class RecipeError {
    {static} +NotFound: Error
    {static} +NullParameters: Error
    {static} +AlreadyExist: Error
    {static} +VoteFail: Error
    {static} +AlreadyInactive: Error
    {static} +AlreadyActive: Error
    {static} +AddRecipeFail: Error
    {static} +UpdateRecipeFail: Error
    {static} +DeleteRecipeFail: Error
}

' =========== Library class ===========
interface "IRequest<TResponse>" #black;line:white;text:white
interface "IRequestHandler<TRequest, TResponse>" #black;line:white;text:white
' =========== Library class ===========
together {
    class AddActivityLogEvent #CadetBlue;line:white;text:white
}

AdminController --|> BaseApiController
AdminController "1"--"1" EntityIdDTO
AdminController "1"--"1" RestoreRecipeCommand

RestoreRecipeCommand ..|> "IRequest<TResponse>"

RestoreRecipeCommandHandler ..|> "IRequestHandler<TRequest, TResponse>"
RestoreRecipeCommandHandler "1" --"1" RestoreRecipeCommand

RestoreRecipeCommandHandler "1" o--"1" IApplicationDbContext
RestoreRecipeCommandHandler "1" o--"1" IServiceBus
RestoreRecipeCommandHandler "1" o--"1" IUnitOfWork

RestoreRecipeCommandHandler "1" --"1" Result
RestoreRecipeCommandHandler "1" --"1..*" AddActivityLogEvent
RestoreRecipeCommandHandler "1" --"1..*" RecipeError

Error "1..*" --o "1" RecipeError

@enduml